<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Veno Community</string>
    <!--    <string name="title_activity_main">MainActivity</string>-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="communication">커뮤니케이션</string>
    <string name="report">Report</string>

    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="login">로그인</string>
    <string name="notAccount1">아직 계정이 없으신가요?</string>
    <string name="account_have">계정이 있으신가요?</string>
    <string name="account_have2">로그인 하기</string>
    <string name="notAccount2">계정만들기</string>
    <string name="login_complate">로그인 성공</string>
    <string name="signup_complate">회원가입 성공</string>
    <string name="find_account">계정 찾기</string>
    <string name="signup_email">회원가입</string>
    <string name="logout">로그아웃</string>
    <string name="account">계정</string>
    <string name="logout_complate">로그아웃 성공</string>
    <string name="logout_fail">로그아웃 실패</string>
    <string name="login_fail_null">이메일과 비밀번호를 입력해 주세요</string>
    <string name="write">글쓰기</string>
    <string name="accoint_null">없는 계정입니다. 다시 확인해 주세요</string>
    <string name="signup_fail_null">빠진 부분 및 비밀번호가 일치하지 않습니다.</string>
    <string name="error_event">존재하지 않는 이벤트입니다. 개발자에게 문의 해 주세요</string>
    <string name="junbo">개인정보 약관 및 서비스, 이벤트성 약관 보기</string>
    <string name="document">게시글</string>
    <string name="nikname">닉네임</string>
    <string name="notice">공지사항</string>

    <string name="follow">팔로우</string>
    <string name="following">필로잉</string>
    <string name="follower">팔로워</string>
    <string name="follow_cancel">팔로우 취소</string>
    <string name="profile">프로필</string>
    <string name="count_0">0</string>

    <string name="join_application_title">신청이 완료되었습니다.</string>
    <string name="join_application">신청중입니다. 잠시 기달려 주세요</string>

    <string name="failure_title">불합격 되었습니다.</string>
    <string name="failure">죄송합니다. 조건이 맞지 않아 불합격처리 되었습니다.</string>

    <string name="acceptance_title">합격 되었습니다.</string>
    <string name="acceptance">축하드립니다. 힙격 되었습니다. 관리자가 곧 알림을 보냅니다. 알림에 따라서 행동 해 주세요</string>

    <string name="sand">보내기</string>

    <string name="upload_img">사진 올리기</string>
    <string name="hint_img_content">내용</string>
    <string name="upload_success">업로드 성공</string>
    <string name="upload_fail">업로드 실패</string>

    <string name="back">뒤로</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <string name="menu_notice">더보기</string>
    <string name="menu_write">신청서 쓰기</string>
    <string name="menu_notification">알림</string>
    <string name="menu_about">더보기</string>
    <string name="menu_image">사진</string>
    <string name="menu_ok">완료</string>

</resources>
