<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_notice"
        android:enabled="true"
        android:icon="@drawable/notice_img"
        android:title="@string/menu_notice" />
    <item
        android:id="@+id/join_write"
        android:enabled="true"
        android:icon="@drawable/write_document"
        android:title="@string/menu_write" />
    <item
        android:id="@+id/action_notification"
        android:enabled="true"
        android:icon="@drawable/notification"
        android:title="@string/menu_notification" />
    <item
        android:id="@+id/action_about"
        android:enabled="true"
        android:icon="@drawable/about_img"
        android:title="@string/menu_about" />

</menu>