<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="150dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:layout_gravity="center"
        android:id="@+id/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <!--<com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp">
    <EditText
        android:id="@+id/certified_number"
        android:scrollbarSize="20sp"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:hint="인증코드"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="TextFields" />
    </com.google.android.material.textfield.TextInputLayout>-->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp">
                <EditText
                    android:id="@+id/password1"
                    android:scrollbarSize="20sp"
                    android:inputType="textPassword"
                    android:layout_marginTop="20dp"
                    android:hint="비밀번호"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp">
        <EditText
            android:id="@+id/password2"
            android:scrollbarSize="20sp"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:hint="비밀번호 확인"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
    android:gravity="right"
    android:layout_marginTop="40dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!--  -->
    <TextView
        android:textColor="@color/black"
        android:fontFamily="@font/doppio_one"
        android:layout_margin="0dp"
        android:text="@string/account_have"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <!--  -->
    <Button
        android:layout_marginEnd="30dp"
        android:layout_marginStart="10dp"
        android:id="@+id/login_btn"
        android:background="@color/background_color"
        android:textColor="@color/blue"
        android:text="@string/account_have2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <!--  -->
</LinearLayout>


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp">

    <LinearLayout
        android:layout_above="@id/signup_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:textColor="@color/black"
        android:fontFamily="@font/doppio_one"
        android:layout_above="@id/signup_user"
        android:gravity="center"
        android:textSize="12sp"
        android:text="회원가입시 Veno운영정책에 동의로 간주됩니다."
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/commit"
        android:textColor="@color/blue"
        android:fontFamily="@font/doppio_one"
        android:layout_above="@id/signup_user"
        android:gravity="center"
        android:textSize="12sp"
        android:text="운영정책 보기"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:id="@+id/signup_user"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:background="@color/background_color"
        android:textColor="@color/blue"
        android:text="회원가입"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>
</LinearLayout>